@@ -1,7 +1,7 @@
 #!groovy
 
 DOCKER_IMAGE_NAME='bar'
-DOCKER_IMAGE_NAME_RPM='bar-centos-x86_64:6'
+DOCKER_IMAGE_NAME_RPM='bar-centos-x86_64:7'
 DOCKER_IMAGE_NAME_DEB='bar-debian-x86_64:8'
 DOCKER_IMAGE_NAME_WIN32='bar-mingw32'
 
