@@ -1,9 +1,8 @@
 FROM centos:7
 ENV container docker
 
-# add user for build process
-RUN groupadd -g 1000 build
-RUN useradd -g 1000 -u 1000 build
+ARG uid=0
+ARG gid=0
 
 # update
 RUN yum -y update
@@ -42,11 +41,13 @@ RUN yum -y install \
   xz \
   ;
 RUN yum -y install \
+  autoconf \
+  automake \
   gcc \
   gcc-c++ \
   java-1.6.0-openjdk-devel \
   jre \
-  cmake \
+  libtool \
   make \
   bison \
   flex \
@@ -54,6 +55,27 @@ RUN yum -y install \
   valgrind \
   devtoolset-7-valgrind-devel \
   ;
+
+RUN yum -y install \
+cmake \
+;
+
+# add cmake 3.2
+#RUN wget https://cmake.org/files/v3.2/cmake-3.2.3.tar.gz
+#RUN tar xf cmake-3.2.3.tar.gz
+#RUN (cd cmake-3.2.3; ./bootstrap)
+#RUN (cd cmake-3.2.3; make)
+#RUN (cd cmake-3.2.3; make install)
+#RUN rm -rf cmake-3.2.3
+
+# add users
+RUN groupadd -g 1000 build
+RUN useradd -g 1000 -u 1000 build
+RUN groupadd -g ${gid} jenkins
+RUN useradd -m -u ${uid} -g ${gid} -p `openssl passwd jenkins` jenkins
+
+# enable sudo for all
+RUN echo "ALL ALL = (ALL) NOPASSWD: ALL" > /etc/sudoers.d/all
 
 # fix systemd
 RUN (cd /lib/systemd/system/sysinit.target.wants/; \
